--- a/Android-Contributions/Note-Keeping-App/app/build.gradle
+++ b/Android-Contributions/Note-Keeping-App/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2-native-mt'
     implementation 'androidx.activity:activity-ktx:1.3.1'
 
+    // Splashscreen
+    implementation("androidx.core:core-splashscreen:1.0.0")
 
 }
