--- a/Android-Contributions/Note-Keeping-App/app/src/main/AndroidManifest.xml
+++ b/Android-Contributions/Note-Keeping-App/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NoteKeepingApp">
+        android:theme="@style/Theme.AppSplash">
         <activity
             android:name=".MainActivity"
             android:exported="true">
