--- a/Android-Contributions/MemeShare/app/src/main/AndroidManifest.xml
+++ b/Android-Contributions/MemeShare/app/src/main/AndroidManifest.xml
@@ -14,16 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MemeShare"
         tools:targetApi="31">
-
         <activity
-            android:name=".MainActivity"
+            android:name=".LottieActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
 
             <meta-data
                 android:name="android.app.lib_name"
